--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -1,25 +1,23 @@
-
 {% extends 'main.html' %}
 {% load staticfiles %}
-
 
 {% block title %}
 hi
 {% endblock %}
 
-{% block content %}
+{% block static_content %}
 <div class="page-container">
   
 	<!-- top navbar -->
-    <div class="navbar navbar-default navbar-fixed-top hidden-lg" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top visible-xs">
        <div class="container">
     	<div class="navbar-header">
-           <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+           <button type="button" class="navbar-toggle" data-toggle="offcanvas">
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
              <span class="icon-bar"></span>
            </button>
-           <a class="navbar-brand" href="#">Project Name</a>
+           <a class="navbar-brand" href="#">Stuff</a>
     	</div>
        </div>
     </div>
@@ -28,68 +26,55 @@ hi
       <div class="row row-offcanvas row-offcanvas-left">
         
         <!-- sidebar -->
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-        	<div class="sidebar-fixed">
-	    		<div class="profile-userpic">
-					<img src="{% static 'img/picture.png' %}" class="img-responsive" alt="">
+        <div class="sidebar-wrapper">
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+        	
+    		<div class="profile-userpic">
+				<img src="{% static 'img/picture.png' %}" class="img-responsive" alt="">
+			</div>
+			<!-- END SIDEBAR USERPIC -->
+			<!-- SIDEBAR USER TITLE -->
+			<div class="profile-usertitle">
+				<div class="profile-usertitle-name">
+					Filip Rec
 				</div>
-				<!-- END SIDEBAR USERPIC -->
-				<!-- SIDEBAR USER TITLE -->
-				<div class="profile-usertitle">
-					<div class="profile-usertitle-name">
-						Filip Rec
-					</div>
-					<div class="profile-usertitle-job">
-						Python / Django Developer
-					</div>
+				<div class="profile-usertitle-job">
+					Python / Django Developer
 				</div>
+			</div>
 
-	        	<div class="profile-usermenu">
-		            <ul class="nav">
-		              <li class="active"><a href="#">Home</a></li>
-		              <li><a href="#">Link 1</a></li>
-		              <li><a href="#">Link 2</a></li>
-		              <li><a href="#">Link 3</a></li>              
-		            </ul>
-	        	</div>
+        	<div class="profile-usermenu">
+	            <ul class="nav">
+	              <li><a href="{% url 'blog' %}">Blog</a></li>
+                
+	              <li><a href="#">Projects</a></li>
+	              <li><a href="{% url 'about' %}">About</a></li>
+	            </ul>
+              <br>
+              <form class="form-search" method="get" action="{% url 'search' %}">
+              <div class="search-wrapper">
+<div class="col-lg-6">
+    <div class="input-group">
+      <input type="text" name="q" id="id_q" class="form-control" placeholder="Search for...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="submit">Go!</button>
+      </span>
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
+  </div>
+              </form>
+
+
+
         	</div>
+        	
   		</div>
+      </div>
         <!-- main area -->
         <div class="col-xs-12 col-sm-9">
-          <h1>Shrink Width to Collapse Sidebar</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in nisi eu arcu tempus vehicula. 
-            Nulla faucibus cursus metus in sagittis. Nunc elit leo, imperdiet in ligula in, euismod varius est. 
-            Aenean pellentesque lorem a porttitor placerat. Vestibulum placerat nunc ac rutrum fringilla. Donec 
-            arcu leo, tempus adipiscing volutpat id, congue in purus. Pellentesque scelerisque mattis nibh vel 
-            semper. Sed a risus purus. Fusce pulvinar, velit eget rhoncus facilisis, enim elit vulputate nisl, a 
-            euismod diam metus eu enim. Nullam congue justo vitae justo accumsan, sit amet malesuada nulla sagittis. 
-            Nam neque tellus, tristique in est vel, sagittis congue turpis. Aliquam nulla lacus, laoreet dapibus 
-            odio vitae, posuere volutpat magna. Nam pulvinar lacus in sapien feugiat, sit amet vestibulum enim 
-            eleifend. Integer sit amet ante auctor, lacinia sem quis, consectetur nulla.</p>
-    
-          <p>Vestibulum porttitor massa eget pellentesque eleifend. Suspendisse tempor, nisi eu placerat auctor, 
-            est erat tempus neque, pellentesque venenatis eros lorem vel quam. Nulla luctus malesuada porttitor. 
-            Fusce risus mi, luctus scelerisque hendrerit feugiat, volutpat gravida nisi. Quisque facilisis risus 
-            in lacus sagittis malesuada. Suspendisse non purus diam. Nunc commodo felis sit amet tortor 
-            adipiscing varius. Fusce commodo nulla quis fermentum hendrerit. Donec vulputate, tellus sed 
-            venenatis sodales, purus nibh ullamcorper quam, sit amet tristique justo velit molestie lorem.</p>
-    
-          <p>Fusce sollicitudin lacus lacinia mi tincidunt ullamcorper. Aenean velit ipsum, vestibulum nec 
-            tincidunt eu, lobortis vitae erat. Nullam ultricies fringilla ultricies. Sed euismod nibh quis 
-            tincidunt dapibus. Nulla quam velit, porta sit amet felis eu, auctor fringilla elit. Donec 
-            convallis tincidunt nibh, quis pellentesque sapien condimentum a. Phasellus purus dui, rhoncus 
-            id suscipit id, ornare et sem. Duis aliquet posuere arcu a ornare. Pellentesque consequat libero 
-            id massa accumsan volutpat. Fusce a hendrerit lacus. Nam elementum ac eros eu porttitor. 
-            Phasellus enim mi, auctor sit amet luctus a, commodo fermentum arcu. In volutpat scelerisque 
-            quam, nec lacinia libero.</p>
-    
-          <p>Aliquam a lacinia orci, iaculis porttitor neque. Nullam cursus dolor tempus mauris posuere, eu 
-            scelerisque sem tincidunt. Praesent blandit sapien at sem pulvinar, vel egestas orci varius. 
-            Praesent vitae purus at ante aliquet luctus vel quis nibh. Mauris id nulla vitae est lacinia 
-            rhoncus a vel justo. Donec iaculis quis sapien vel molestie. Aliquam sed elementum orci. 
-            Vestibulum tristique tempor risus et malesuada. Sed eget ligula sed quam placerat dapibus. 
-            Integer accumsan ac massa at tempus.</p>
-          
+          {% block page_content %}
+
+          {% endblock %}
         </div><!-- /.col-xs-12 main -->
     </div><!--/.row-->
   </div><!--/.container-->
