--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -17,6 +17,10 @@
 
         <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/zenburn.min.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
+        
         <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">        
         {% block page_stylesheets %}
         {% endblock %}
