dodano model cv, ikony do mediow spolecznosciowych

--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -67,7 +67,14 @@ hi
 
 
         	</div>
-        	
+<div class="profile-usericons" align="center">
+<a href="http://www.linkedin.com"><i class="fa fa-linkedin fa-2x"></i></a>
+<a href="http://www.linkedin.com"><i class="fa fa-facebook fa-2x"></i></a>
+<a href="http://www.linkedin.com"><i class="fa fa-github fa-2x"></i></a>
+
+    </div>
+
+
   		</div>
       </div>
         <!-- main area -->
