--- a/personalwebsite/static/css/main.css
+++ b/personalwebsite/static/css/main.css
@@ -157,7 +157,7 @@ body {
   #sidebar {
     position: fixed;
     width: 250px;
-    height: 100%;
+    height: 410px;
     left: 0px;
     
     padding-top: 20px;
@@ -225,15 +225,16 @@ body {
   color: #384814;
 }
 
-.profile-usermenu ul li.active {
-  border-bottom: none;
+.profile-usericons i {
+  padding: 10px;
 }
 
-.profile-usermenu ul li.active a {
+.profile-usericons a {
+  color: #5d7822;
+}
+
+.profile-usericons a:hover {
   color: #384814;
-  background-color: #EAFAC6;
-  border-left: 6px solid #5d7822;
-  margin-left: -2px;
 }
 
 .right-align {
@@ -244,6 +245,12 @@ body {
   width: 235px;
   padding-right: 12px;
 }
+
+.form-control:focus {
+  border-color: #384814;
+  box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(22,28,8,.6);
+}
+
 
 /* ==========================================================================
    Helper classes
