--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -15,13 +15,15 @@
         <link rel="shortcut-icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
         <!-- Place favicon.ico in the root directory -->
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> 
         <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/zenburn.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
         
-        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">        
+               
         {% block page_stylesheets %}
         {% endblock %}
 
