Dodano podstrone 'About', usprawnienia w stylach

--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -68,9 +68,10 @@ hi
 
         	</div>
 <div class="profile-usericons" align="center">
-<a href="http://www.linkedin.com"><i class="fa fa-linkedin fa-2x"></i></a>
-<a href="http://www.linkedin.com"><i class="fa fa-facebook fa-2x"></i></a>
-<a href="http://www.linkedin.com"><i class="fa fa-github fa-2x"></i></a>
+<a href="https://www.linkedin.com/in/FilipRec"><i class="fa fa-linkedin fa-2x"></i></a>
+<a href="https://github.com/zefj"><i class="fa fa-github fa-2x"></i></a>
+<a href="https://www.facebook.com/naamioni"><i class="fa fa-facebook fa-2x"></i></a>
+
 
     </div>
 
