--- a/personalwebsite/apps/mainsite/templates/mainsite/about.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/about.html
@@ -1,4 +1,19 @@
 {% extends 'base.html' %}
 {% block page_content %}
-<h1>Nothing to see here yet.</h1>
+{% if about_text %}
+{% for text in about_text %}
+{{ text.text|safe }}
+{% endfor %}
+{% endif %}
+<div class="cv-download" align="center">
+{% if cv_pl or cv_en %}
+	<h3>You can download my <b>curriculum vitae</b> here:</h3>
+	{% if cv_pl %}
+	<a href="{{ cv_pl.cv.url }}" class="btn btn-success btn-lg" role="button">In polish</a>
+	{% endif %}
+	{% if cv_en %}
+	<a href="{{ cv_en.cv.url }}" class="btn btn-success btn-lg" role="button">In english</a>
+	{% endif %}
+{% endif %}	
+</div>
 {% endblock %}
