--- a/personalwebsite/apps/mainsite/templates/mainsite/search_results.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/search_results.html
@@ -23,8 +23,42 @@
 		</div>
 	</div>
 	{% endfor %}
+
+	
+{% if search_results.has_other_pages %}
+	{% load url_replace %}
+	<nav>
+	    <ul class="pagination">
+	    {% if search_results.has_previous %}
+	        <li>
+	            <a href="?{% url_replace request 'page' search_results.previous_page_number %}" aria-label="Previous">
+	                <span aria-hidden="true">&laquo;</span>
+	            </a>
+	        </li>
+	    {% endif %}
+	    {% for page_num in search_results.paginator.page_range %}
+	        {% if search_results.number == page_num %}
+	            <li class="active"><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
+	        {% else %}
+	            <li><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
+	        {% endif %}
+	    {% endfor %}
+	    {% if search_results.has_next %}
+		    <li>
+		      <a href="?{% url_replace request 'page' search_results.next_page_number %}" aria-label="Next">
+		        <span aria-hidden="true">&raquo;</span>
+		      </a>
+		    </li>
+	    {% endif %}
+	  </ul>
+	</nav>
+{% endif %}
+
+
 {% else %}
 	<h1>Nothing to see here</h1>
 {% endif %}
+
+
 
 {% endblock %}
