--- a/personalwebsite/static/css/main.css
+++ b/personalwebsite/static/css/main.css
@@ -251,7 +251,28 @@ body {
   box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(22,28,8,.6);
 }
 
+.pagination li a {
+  color: #000;
+}
 
+.pagination li a:hover {
+  color: #000;
+  background-color: #f9fdf0;
+}
+
+.pagination li.active a {
+  color: #f9fdf0;
+  background-color: #5d7822;
+}
+
+.pagination li.active a:hover {
+  color: #f9fdf0;
+  background-color: #5d7822;
+}
+
+.btn.btn-default:hover{
+  background-color: #f9fdf0;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
