--- a/personalwebsite/apps/mainsite/templates/mainsite/blog.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/blog.html
@@ -14,8 +14,20 @@
 		<div class="blog-post">
 			<h2 class="blog-post-title">
 			<a href="{% url 'post' post.slug %}">{{ post.title }}</a></h2>
-			<p class="blog-post-meta">Published on: {{ post.pub_date }}<br>
-			Tags: {{ post.get_tags }}</p><hr>
+			<div class="blog-post-meta">Published on: {{ post.pub_date }}
+			
+			<form action="{% url 'blog' %}" method="get">
+			Tags: 
+				{% for tag in post.get_tags_list %}
+					{% if filter_tag == tag %}
+					<input type="submit" class="btn btn-xs btn-custom" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+					{% else %}
+					<input type="submit" class="btn btn-xs btn-default" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+					{% endif %}
+				{% endfor %}
+			</form>			
+			</div>
+			<hr>
 			{{ post.text|truncatewords:300|safe }}<br>
 			
 			<div class="right-align">
@@ -28,6 +40,21 @@
 {% else %}
 	<h1>Nothing to see here</h1>
 {% endif %}
+
+<div class="blog-content-wrapper">
+	<div class="available-tags">
+	<hr>
+	<form action="{% url 'blog' %}" method="get">
+	All tags: 
+		{% for tag in available_tags %}
+			{% if filter_tag == tag %}
+			<input type="submit" class="btn btn-xs btn-custom" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+			{% else %}
+			<input type="submit" class="btn btn-xs btn-default" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+			{% endif %}
+		{% endfor %}
+	</form>			
+</div><br>
 
 {% if posts.has_other_pages %}
 	{% load url_replace %}
