--- a/personalwebsite/apps/mainsite/templates/mainsite/post.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/post.html
@@ -7,12 +7,19 @@
 {% endblock %}
 
 {% block page_content %}
-<div class="blog-content-wrapper">
-<div class="blog-post">
-<h2 class="blog-post-title">
-{{ post.title }}</h2>
-<p class="blog-post-meta">Published on: {{ post.pub_date }}<br>
-Tags: {{ post.get_tags }}</p><hr>
+	<div class="blog-content-wrapper">
+		<div class="blog-post">
+			<h2 class="blog-post-title">
+			<a href="{% url 'post' post.slug %}">{{ post.title }}</a></h2>
+			<div class="blog-post-meta">Published on: {{ post.pub_date }}
+			
+			<form action="{% url 'blog' %}" method="get">
+			Tags: 
+				{% for tag in post.get_tags_list %}
+					<input type="submit" class="btn btn-xs btn-default" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+				{% endfor %}
+			</form>			
+			</div><hr>
 {{ post.text|safe }}<br><hr><br>
 </div>
 {% endblock %}
