--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -9,7 +9,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+        <script type="text/javascript">
+        var disqus_developer = 1;
+        </script>
 
         <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
         <link rel="shortcut-icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
@@ -58,5 +60,6 @@
         </script>
         //-->
 
+        
     </body>
 </html>
