--- a/personalwebsite/apps/mainsite/templates/mainsite/post.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/post.html
@@ -5,12 +5,14 @@
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
 {% endblock %}
-
+{% block title %}
+{{ post.title }}
+{% endblock %}
 {% block page_content %}
 	<div class="blog-content-wrapper">
 		<div class="blog-post">
 			<h2 class="blog-post-title">
-			<a href="{% url 'post' post.slug %}">{{ post.title }}</a></h2>
+			{{ post.title }}</h2>
 			<div class="blog-post-meta">Published on: {{ post.pub_date }}
 			
 			<form action="{% url 'blog' %}" method="get">
@@ -22,4 +24,31 @@
 			</div><hr>
 {{ post.text|safe }}<br><hr><br>
 </div>
+
+<div id="disqus_thread"></div>
+<script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+/**/
+var disqus_config = function () {
+this.page.url = "http://127.0.0.1:8000" + "{{ request.path }}"; // Replace PAGE_URL with your page's canonical URL variable
+
+this.page.identifier = "{{ request.path }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.title = "{{ post.title }}";
+};
+
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//zefplayground.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
 {% endblock %}
