--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -9,9 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <script type="text/javascript">
-        var disqus_developer = 1;
-        </script>
+
 
         <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
         <link rel="shortcut-icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
@@ -21,7 +19,7 @@
         <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> 
         <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/zenburn.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
         
