--- a/personalwebsite/static/css/main.css
+++ b/personalwebsite/static/css/main.css
@@ -105,34 +105,37 @@ body {
   padding-top: 20px;
 }
 
-.col-sm-9 {
-  margin-left: 250px;
-  background-color: #fff;
-}
-
-#sidebar {
-  position: fixed;
-  width: 250px;
-  height: 100%;
-  padding-right: 0;
-  padding-left: 0;
-  padding-top: 20px;
-}
-
 @media (min-width: 1200px) {
   .container {
     width: 1200px;
   }
 }
 
-/* collapsed sidebar styles */
-@media screen and (max-width: 767px) {
+.navbar-toggle {
+  float: left;
+}
 
-  .col-sm-9 {
-    margin-left: 0px;
-    height: 100%;
-    background-color: #fff;
-  }
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index:99;
+}
+
+#sidebar {
+  position: fixed;
+  width: 270px;
+  padding-top: 20px;
+}
+
+#main-content {
+  margin-left: 270px;
+}
+
+
+/* collapsed sidebar styles */
+@media screen and (max-width: 992px) {
 
   .row-offcanvas {
     position: relative;
@@ -142,28 +145,76 @@ body {
     padding-top: 20px;
   }
 
-  .row-offcanvas-left
+  .row-offcanvas
   #sidebar {
+    display: none;
+  }
+
+  .row-offcanvas.active
+  #sidebar {
+    display: inline;
+    position: fixed;
+    left: 0%;
+    width: 30%;
+  }
+
+  .row-offcanvas
+  #main-content {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .row-offcanvas.active
+  #main-content {
+    width: 70%;
+    position: relative;
+    left: 28%;
+    margin-right: 0;
+  }
+
+  .row-offcanvas.active
+  .overlay {
+    pointer-events: visible;
+  }
+
+  .profile-usericons {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+    padding-top: 20px;
+  }
+
+  .row-offcanvas 
+  #sidebar {
+    width: 0px;
     left: -250px;
+    height: 0px;
   }
 
-  .row-offcanvas-left.active
-  .col-sm-9 {
-    left: 250px;
-    height: 100%;
-  }
 
-  .row-offcanvas-left.active
+  .row-offcanvas.active
   #sidebar {
     position: fixed;
     width: 250px;
-    height: 410px;
+    height: 100%;
     left: 0px;
     
     padding-top: 20px;
   }
-}
 
+  .row-offcanvas.active
+  #main-content {
+    left: 250px;
+  }
+}
 
 .profile-userpic img {
   float: none;
@@ -225,6 +276,10 @@ body {
   color: #384814;
 }
 
+.profile-usericons {
+  padding-top: 25px;
+}
+
 .profile-usericons i {
   padding: 10px;
 }
@@ -241,9 +296,8 @@ body {
   float: right;
 }
 
-.input-group {
-  width: 235px;
-  padding-right: 12px;
+.form-control {
+  padding: 0;
 }
 
 .form-control:focus {
@@ -287,6 +341,10 @@ body {
 .btn-custom:hover {
   color: #f9fdf0;
   background-color: #5d7822;
+}
+
+#projects.container-fluid {
+  padding-left: 0;
 }
 
 /* ==========================================================================
