fixed titles, favicon, approaching production-ready version

--- a/personalwebsite/apps/mainsite/templates/mainsite/blog.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/blog.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block title %}
+Home
+{% endblock %}
+
 {% block page_content %}
 
 {% if posts %}
