--- a/personalwebsite/apps/mainsite/templates/mainsite/projects.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/projects.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+
+{% block title %}
+Projects
+{% endblock %}
+
 {% block page_content %}
 
 <div class="container-fluid" id="projects">
