--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -5,14 +5,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} | frec.pl</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 
-        <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}">
-        <link rel="shortcut-icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}"/>
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
