--- a/personalwebsite/apps/mainsite/templates/mainsite/post.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/post.html
@@ -32,7 +32,7 @@
 */
 /**/
 var disqus_config = function () {
-this.page.url = "http://127.0.0.1:8000" + "{{ request.path }}"; // Replace PAGE_URL with your page's canonical URL variable
+// this.page.url = "http://127.0.0.1:8000" + "{{ request.path }}"; // Replace PAGE_URL with your page's canonical URL variable
 
 this.page.identifier = "{{ request.path }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 this.page.title = "{{ post.title }}";
