--- a/personalwebsite/templates/base.html
+++ b/personalwebsite/templates/base.html
@@ -4,8 +4,9 @@
 {% block static_content %}
 <div class="page-container">
 
+
   <!-- top navbar -->
-  <div class="navbar navbar-default navbar-fixed-top visible-sm visible-xs">
+  <div class="navbar navbar-inverse navbar-fixed-top visible-sm visible-xs">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle visible-sm visible-xs" data-toggle="offcanvas">
@@ -13,7 +14,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Stuff</a> 
+        <a class="navbar-brand" href="{% url 'blog' %}">frec.pl</a> 
       </div>
     </div>
   </div>
@@ -21,6 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
+
         <div class="row row-offcanvas">
           <div class="col-lg-3 col-md-3 col-sm-4" id="sidebar">
             <div class="profile-userpic">
@@ -65,8 +67,8 @@
             </div>  
           </div>
         
-          <div class="col-lg-9 col-md-9 col-sm-12" id="main-content">
-            <div class="overlay" data-toggle="offcanvas"></div>
+          <div class="col-lg-9 col-md-9 col-sm-12 no-float" id="main-content">
+            <div class="overlay" data-toggle="offcanvas"></div>  
               {% block page_content %}
 
               {% endblock %}
