--- a/personalwebsite/templates/main.html
+++ b/personalwebsite/templates/main.html
@@ -7,7 +7,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>{% block title %}{% endblock %} | frec.pl</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1">
+
 
 
 
