Fixed code snippets rendering

--- a/personalwebsite/apps/mainsite/templates/mainsite/post.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/post.html
@@ -20,7 +20,11 @@
 				</form>		
 			</div>
 			<hr>
-		{{ post.text|safe }}
+			<div class="blog-post-content">
+
+			{{ post.text|safe }}
+
+			</div>
 		<br><hr><br>
 		</div>
 	</div>
