--- a/personalwebsite/apps/mainsite/templates/mainsite/blog.html
+++ b/personalwebsite/apps/mainsite/templates/mainsite/blog.html
@@ -28,9 +28,11 @@ Home
 					</form>			
 				</div>
 				<hr>
-				{{ post.text|truncatewords:300|safe }}
+				<div class="blog-post-content">
 
+				{{ post.text|truncatewords_html:300|safe }}
 
+				</div>
 				<div class="right-align">
 					<button class="btn btn-xs btn-default" align="right" onClick="location.href='{% url 'post' post.slug %}'">Read on...</button>
 				</div>
@@ -44,50 +46,53 @@ Home
 
 {% if available_tags %}
 <div class="blog-content-wrapper">
-	<div class="available-tags">
-		<hr>
-		<form action="{% url 'blog' %}" method="get">
-			All tags: 
-				{% for tag in available_tags %}
-					{% if filter_tag == tag %}
-						<input type="submit" class="btn btn-xs btn-custom" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
-					{% else %}
-						<input type="submit" class="btn btn-xs btn-default" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
-					{% endif %}
-				{% endfor %}
-		</form>			
+	<div class="blog-footer">
+		<div class="available-tags">
+			<hr>
+			<form action="{% url 'blog' %}" method="get">
+				All tags: 
+					{% for tag in available_tags %}
+						{% if filter_tag == tag %}
+							<input type="submit" class="btn btn-xs btn-custom" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+						{% else %}
+							<input type="submit" class="btn btn-xs btn-default" align="left" id="{{ tag }}" name="filter" value="{{ tag }}" />
+						{% endif %}
+					{% endfor %}
+			</form>			
+		</div>
+
+	<br>
+	{% endif %}
+
+	{% if posts.has_other_pages %}
+		{% load url_replace %}
+		<nav>
+		    <ul class="pagination">
+		    {% if posts.has_previous %}
+		        <li>
+		            <a href="?{% url_replace request 'page' posts.previous_page_number %}" aria-label="Previous">
+		                <span aria-hidden="true">&laquo;</span>
+		            </a>
+		        </li>
+		    {% endif %}
+		    {% for page_num in posts.paginator.page_range %}
+		        {% if posts.number == page_num %}
+		            <li class="active"><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
+		        {% else %}
+		            <li><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
+		        {% endif %}
+		    {% endfor %}
+		    {% if posts.has_next %}
+			    <li>
+			      <a href="?{% url_replace request 'page' posts.next_page_number %}" aria-label="Next">
+			        <span aria-hidden="true">&raquo;</span>
+			      </a>
+			    </li>
+		    {% endif %}
+		  </ul>
+		</nav>
+	{% endif %}	
 	</div>
 </div>
-<br>
-{% endif %}
 
-{% if posts.has_other_pages %}
-	{% load url_replace %}
-	<nav>
-	    <ul class="pagination">
-	    {% if posts.has_previous %}
-	        <li>
-	            <a href="?{% url_replace request 'page' posts.previous_page_number %}" aria-label="Previous">
-	                <span aria-hidden="true">&laquo;</span>
-	            </a>
-	        </li>
-	    {% endif %}
-	    {% for page_num in posts.paginator.page_range %}
-	        {% if posts.number == page_num %}
-	            <li class="active"><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
-	        {% else %}
-	            <li><a href="?{% url_replace request 'page' page_num %}">{{ page_num }}</a></li>
-	        {% endif %}
-	    {% endfor %}
-	    {% if posts.has_next %}
-		    <li>
-		      <a href="?{% url_replace request 'page' posts.next_page_number %}" aria-label="Next">
-		        <span aria-hidden="true">&raquo;</span>
-		      </a>
-		    </li>
-	    {% endif %}
-	  </ul>
-	</nav>
-
-{% endif %}
 {% endblock %}
