--- a/personalwebsite/static/css/blog.css
+++ b/personalwebsite/static/css/blog.css
@@ -72,7 +72,7 @@ h6, .h6 {
 }
 .blog-post-title {
   margin-bottom: 5px;
-  font-size: 40px;
+  font-size: 35px;
   color: #333;
 }
 
@@ -86,17 +86,10 @@ h6, .h6 {
   line-height: 200%;
 }
 
+.blog-post-content {
+  font-size: 13px;
+}
+
 /*
  * Footer
  */
-
-.blog-footer {
-  padding: 40px 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
-}
