Added underline gif

--- a/personalwebsite/apps/blendy/templates/blendy/home.html
+++ b/personalwebsite/apps/blendy/templates/blendy/home.html
@@ -15,7 +15,7 @@ Blendy
 	.underline {
 	    display: inline-block;
 	    position:relative;
-	    background: url({% static 'img/underline.gif' %}) bottom repeat-x;
+	    background: url({% static 'underline.gif' %}) bottom repeat-x;
 	}
 
 	p {
